<resources>
    <string name="app_name">PhotogMap</string>
    <string name="appNameText">appNameText</string>
    <string name="photogmap_app_name">PhotogMap</string>
    <string name="create_new_account">Creare cont nou</string>
    <string name="your_email">Adresa de mail</string>
    <string name="your_email_txt">your_email_edit_text</string>
    <string name="your_password">Parola</string>
    <string name="your_repeat_password">Confirmă parola</string>
    <string name="email">Adresa de mail</string>
    <string name="password">Parola</string>
    <string name="confirm_password">Confirmă parola</string>
    <string name="first_name">Prenume</string>
    <string name="last_name">Nume de familie</string>
    <string name="register">Înregistrare</string>
    <string name="already_registered_login_here">Ai deja cont ? Autentifică-te aici!</string>
    <string name="login_here">Autentifică-te aici!</string>
    <string name="already_register">Ai deja cont ? </string>
    <string name="cover_image">Cover Image</string>
    <string name="todo">TODO</string>
    <string name="photog_map">Photog Map</string>
    <string name="new_here">Ai deja cont ? </string>
    <string name="create_account">Creare cont!</string>
    <string name="log_in">Autentificare</string>
    <string name="log_out">Deconectare</string>
    <string name="autentificare">Autentificare</string>
    <string name="inregistreaza_te">Înregistrează-te aici</string>
    <string name="nu_ai_cont">Nu ai cont ? </string>
    <string name="hello">Hello!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="profile2">Profile2</string>
    <string name="telefon">Telefon</string>
    <string name="tip_de_utilizator">Tip de utilizator</string>
    <string name="tip_utilizator">Tip utilizator</string>
    <string name="num_r_de_telefon">Număr de telefon</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="titlu_fotografie">Titlu fotografie</string>
    <string name="descriere_fotografie">Descriere fotografie</string>
    <string name="descrierea_fotografiei">Descrierea fotografiei</string>
    <string name="titlul_fotografie">Titlul fotografiei</string>
    <string name="titlul_fotografiei">Titlul fotografiei</string>
    <string name="adauga_fotografie">Adaugă fotografie</string>
    <string name="fotografia_ta_va_fi_afisata_aici">Fotografia ta va fi afișată aici</string>
    <string name="ncarc_alt_fotografie">Încarcă altă fotografie</string>
    <string name="incarca_alta_fotografie">Încarcă altă fotografie</string>
    <string name="my_gallery">My gallery</string>
    <string name="prenume">Prenume</string>
    <string name="nume_de_familie">Nume de familie</string>
    <string name="numar_de_telefon">Număr de telefon</string>
    <string name="puncte">Puncte</string>
    <string name="voturi">Voturi</string>
    <string name="salveaza_locatia_curenta">Salvează locația curentă</string>
    <string name="fara_locatie">Fara locatie</string>
    <string name="localitate">Localitate</string>
    <string name="vote">Vote</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="clasament">Clasament</string>
    <string name="profil">Profil</string>
    <string name="deconectare">Deconectare</string>
    <string name="pozele_mele">Pozele mele</string>
    <string name="salut">Salut!</string>
    <string name="text_hello_client">Găsește cel mai bun fotograf cu Photog Map!</string>
    <string name="hello_photographer_message">Fii gata să ajungi cel mai bun fotograf din zona ta și nu doar ! </string>
    <string name="hello_photographer_message_2">Urmărește-ți concurența cu Photog Map!</string>
</resources>