<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadPhotoActivity">


        <ImageView
            android:layout_below="@+id/ePhotoDescription"
            android:layout_above="@id/progressBarUploadPhoto"
            android:id="@+id/imgUploaded"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/fotografia_ta_va_fi_afisata_aici" />



    <Button
        android:id="@+id/btnAddPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAddAnotherPhoto"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/black"
        android:text="@string/adauga_fotografie"
        android:textSize="12sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnAddAnotherPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/black"
        android:text="@string/incarca_alta_fotografie"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/ePhotoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:hint="@string/titlul_fotografiei"
        android:minHeight="48dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ePhotoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ePhotoName"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/descrierea_fotografiei"
        android:minHeight="48dp"
        android:textStyle="italic" />

    <ProgressBar
        android:id="@+id/progressBarUploadPhoto"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/btnAddPhoto"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"/>


</RelativeLayout>