<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:background="@drawable/border_background">

    <RelativeLayout
        android:id="@+id/photographerEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_background">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfilePicturePhotographerItem"
            android:layout_width="120dp"
            android:layout_height="104dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="3dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@mipmap/ic_profile_round"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfilePicturePhotographerItem"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tAvgPhotographer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:padding="3dp"
                android:text="Average"
                android:textSize="16sp"
                android:textStyle="italic|bold" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/nameLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgProfilePicturePhotographerItem"
            android:background="@drawable/border_background"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tPhotographerSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prenume"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tPhotographerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/nume_de_familie"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/infoLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameLL"
            android:layout_toEndOf="@+id/imgProfilePicturePhotographerItem"
            android:background="@drawable/border_background"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tPhotographerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/tPhotographerPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/numar_de_telefon"
                android:textSize="16sp"
                android:textStyle="italic|bold" />


            <TextView
                android:id="@+id/tPhotographerLocality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="Localitate"
                android:textSize="16sp"
                android:textStyle="italic|bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tPhotographerCounty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="3dp"
                    android:text="Județ"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/tPhotographerCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"

                    android:text="Țară"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />
            </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tPhotographerScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/border_background"
                        android:padding="3dp"
                        android:text="@string/puncte"
                        android:textSize="16sp"
                        android:textStyle="italic|bold" />

                    <TextView
                        android:id="@+id/tPhotographerVotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/border_background"
                        android:padding="3dp"
                        android:text="@string/voturi"
                        android:textSize="16sp"
                        android:textStyle="italic|bold" />

                </LinearLayout>



            </LinearLayout>


        </LinearLayout>



    </RelativeLayout>

</androidx.cardview.widget.CardView>