<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:background="@drawable/border_background">

    <RelativeLayout
        android:id="@+id/photographerEntry_Client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_background">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfilePicturePhotographerItem_Client"
            android:layout_width="120dp"
            android:layout_height="104dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@mipmap/ic_profile_round"
            app:civ_border_width="2dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:id="@+id/pointsLL"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfilePicturePhotographerItem_Client"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tPhotographerScore_Client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border_background"
                android:padding="3dp"
                android:text="@string/puncte"
                android:textSize="16sp"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/tPhotographerVotes_Client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@drawable/border_background"
                android:padding="3dp"
                android:text="@string/voturi"
                android:textSize="16sp"
                android:textStyle="italic|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pointsLL">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Average" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nameLL_Client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgProfilePicturePhotographerItem_Client"
            android:background="@drawable/border_background"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tPhotographerSurname_Client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prenume"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tPhotographerName_Client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/nume_de_familie"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/infoLL_Client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameLL_Client"
            android:layout_toEndOf="@+id/imgProfilePicturePhotographerItem_Client"
            android:background="@drawable/border_background"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tPhotographerEmail_Client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/tPhotographerPhoneNumber_Client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/numar_de_telefon"
                android:textSize="16sp"
                android:textStyle="italic|bold" />


            <TextView
                android:id="@+id/tPhotographerLocality_Client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/localitate"
                android:textSize="16sp"
                android:textStyle="italic|bold" />



                <TextView
                    android:id="@+id/tPhotographerCounty_Client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="3dp"
                    android:text="Județ"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/tPhotographerCountry_Client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"

                    android:text="Țară"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />




        </LinearLayout>

        <LinearLayout
            android:id="@+id/voteLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoLL_Client"
            android:layout_toEndOf="@+id/imgProfilePicturePhotographerItem_Client"
            android:background="@drawable/border_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">


            <RatingBar
                android:id="@+id/ratingPhotographer_Client"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="3dp"
                android:gravity="center"
                android:isIndicator="false"
                android:numStars="5"
                android:stepSize="1"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnVote_Client"
                android:layout_width="60dp"
                android:layout_height="48dp"

                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_button"
                android:backgroundTint="#14FAE3"
                android:focusableInTouchMode="true"
                android:foreground="@drawable/ic_vote"
                android:foregroundGravity="center"
                android:foregroundTint="@color/black"
                android:gravity="center"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>